--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "devrabiul/laravel-pwa-kit": "^1.0",
         "filament/filament": "~4.0",
         "filament/support": "^4.0",
         "flowframe/laravel-trend": "^0.4.0",
@@ -14,9 +15,9 @@
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.16",
         "fakerphp/faker": "^1.23",
         "filament/upgrade": "^4.0",
+        "laradumps/laradumps": "^4.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
